First version of the presentation

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>pegski: We got your peg</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +24,76 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h1>pegski</h1>
+					<h2 class="fragment">#teamAttachable</h2>
+					<h2 class="fragment">#weCamp2016</h2>
+				</section>
+				<section><h2>What the heck is a Peg?</h2></section>
+				<section data-background="images/examples/wooden-pegs.jpg" data-background-size="contain" data-background-color="#FFF"></section>
+				<section data-background="images/examples/usage.jpg"></section>
+				<section data-background="images/examples/postits.jpg"></section>
+				<section>
+					<section data-background="images/examples/fish.jpg" data-background-size="contain"></section>
+					<section data-background="images/examples/merriage.jpg" data-background-size="contain"></section>
+				</section>
+				<section data-background="images/examples/festivals.jpg">
+					<h1 class="fragment">Get Pegged!</h1>
+				</section>
+				<section data-background="images/live-demo.jpg" data-background-size="50%"></section>
+				<section data-background="images/live-demo-wifi.jpg" data-background-size="50%"></section>
+				<section>
+					<section>
+						<h1>Technolgy</h1>
+					</section>
+					<section>
+						<h2>Docker</h2>
+						<h2 class="fragment">MongoDB</h2>
+						<h2 class="fragment">GraphQL</h2>
+					</section>
+					<section data-background="images/dumb.png" data-background-size="50%"></section>
+				</section>
+				<section>
+					<section>
+						<h1>People</h1>
+					</section>
+					<section>
+						<h1>Goals</h1>
+					</section>
+					<section data-background="images/team/goals.jpg" data-background-size="contain"></section>
+				</section>
+				<section>
+					<section data-background="images/team/1.jpg" data-background-size="contain"></section>
+					<section>
+						<h1>Merlijn</h1>
+						<h3 class="fragment">Writing code is awesome, but I learned I am not a developer anymore</h3>
+					</section>
+					<section>
+						<h1>Pim</h1>
+						<h3 class="fragment">Developing and Facilitating, I love both but have to choose one</h3>
+					</section>
+					<section>
+						<h1>Roxana</h1>
+						<h3 class="fragment">Learned new technologies, got to write some code and enhanced my creativity</h3>
+					</section>
+					<section>
+						<h1>Tobby</h1>
+						<h3 class="fragment">Focus on the task and not get distracted</h3>
+					</section>
+					<section>
+						<h1>Renato</h1>
+						<h3 class="fragment">Trust in people is the best agile tool</h3>
+					</section>
+					<section>
+						<h1>Jelrik</h1>
+						<h3 class="fragment">Being useful isn't always being present, the art of letting go</h3>
+					</section>
+				</section>
+				<section data-background="#972ADB">
+					<h1>Interaction time!</h1>
+				</section>
+				<section data-background-color="#003366" data-background-image="images/pegski_logo.svg" data-background-size="40%"></section>
+				<section data-background="images/team/3.jpg" data-background-size="contain"></section>
 			</div>
 		</div>
 
@@ -36,6 +104,9 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				history: true,
+				controls: false,
+				progress: false,
+				transition: 'slide',
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
