Added deploy and team members

--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
 				</section>
 				<section data-background-color="#003366" data-background-image="images/pegski_logo.svg" data-background-size="40%"></section>
 				<section data-background="images/team/3.jpg" data-background-size="contain"></section>
+				<section>
+					<section>
+						<h2>The team</h2>
+						<h3><a href="https://twitter.com/mtishauser">Merlijn Tishauser</a></h3>
+						<h3><a href="https://twitter.com/Piwi_91">Pim Widdershoven</a></h3>
+						<h3><a href="https://twitter.com/renatomefi">Renato Mendes Figueiredo</a></h3>
+						<h3><a href="https://twitter.com/RoxanaMCr">Roxana Cristian</a></h3>
+						<h3><a href="https://twitter.com/ToG">Toby G</a></h3>
+					</section>
+					<section>
+						<h2>Coach</h2>
+						<h3><a href="https://twitter.com/jelrikvh">Jelrik van Hal</a></h3>
+						<h2>Speaker</h2>
+						<h3><a href="https://twitter.com/renatomefi">Renato Mendes Figueiredo</a></h3>
+					</section>
+				</section>
 			</div>
 		</div>
 
