--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<section>
 					<h1>pegski</h1>
 					<h2 class="fragment">#teamAttachable</h2>
-					<h2 class="fragment">#weCamp2016</h2>
+					<h2 class="fragment">#weCamp16</h2>
 				</section>
 				<section><h2>What the heck is a Peg?</h2></section>
 				<section data-background="images/examples/wooden-pegs.jpg" data-background-size="contain" data-background-color="#FFF"></section>
@@ -38,7 +38,7 @@
 					<section data-background="images/examples/merriage.jpg" data-background-size="contain"></section>
 				</section>
 				<section data-background="images/examples/festivals.jpg">
-					<h1 class="fragment">Get Pegged!</h1>
+					<h1 class="fragment">We'll peg you!</h1>
 				</section>
 				<section data-background="images/live-demo.jpg" data-background-size="50%"></section>
 				<section data-background="images/live-demo-wifi.jpg" data-background-size="50%"></section>
@@ -51,7 +51,7 @@
 						<h2 class="fragment">MongoDB</h2>
 						<h2 class="fragment">GraphQL</h2>
 					</section>
-					<section data-background="images/dumb.png" data-background-size="50%"></section>
+					<section data-background="images/live-demo-embrace.jpg" data-background-size="50%"></section>
 				</section>
 				<section>
 					<section>
